--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,8 +2,14 @@
   box-sizing: border-box;
 }
 
-body {
+html, body,
+ul, ol, li,
+h1, h2, h3, h4, h5, h6, p, div {
   margin: 0;
+  padding: 0;
+}
+
+body {
   font-family: "Lucida Grande";
 }
 
@@ -116,11 +122,9 @@ header {
   background-color: rgba(255, 255, 255, 0.3);
 }
 
-.menu-icon{
-  color: white;
-  float: right;
+.menu-icon {
   font-size: 25px;
-  padding: 21px 0;
+  padding: 10px 0px;
   display: none;
 }
 
@@ -158,7 +162,7 @@ header {
   color: white;
 }
 
-.text-contents {
+.txt-contents {
   width: 80%;
   display: inline-block;
   margin-top: 15px;
@@ -201,4 +205,12 @@ footer p {
 footer {
   padding-top: 30px;
   padding-bottom: 20px;
+}
+
+.menu-icon {
+  color: white;
+  float: right;
+  font-size: 25px;
+  padding: 21px 0;
+  display: none;
 }
